# q-goal

./: .dockerignore  .gitignore  .mcp.json  README.md  bts.jsonc  docker-compose.yml  opencode.json  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json  tsconfig.json
.claude/: CLAUDE.md  framework-config.json
.claude/agents/: implementer-generic.md  implementer-python.md  implementer-typescript.md  planner.md
.claude/skills/code-conventions/: SKILL.md
.claude/skills/multi-file-workflows/: SKILL.md
.claude/skills/testing-conventions/: SKILL.md
.code-review-graph/: launcher.json
.codex/: config.toml
apps/server/: .env.example  .env.test.example  .gitignore  README.md  package.json  quiz-result.test.ts  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts
apps/web/: .env.example  Dockerfile  README.md  components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.css  root.tsx
apps/web/src/components/: app-bar.tsx  dashboard-header.tsx  header.tsx  loader.tsx  mode-toggle.tsx  player-card.tsx  (+4 more)
docs/llm-wiki/: .state.json  CLAUDE.md
docs/llm-wiki/wiki/: ARCHITECTURE.md  SERVICES.md  getting-started.md  index.md
etl/: pyproject.toml
etl/src/etl/: __init__.py
genai/: .env.example  .gitignore  API.md  Dockerfile  README.md  pyproject.toml
genai/src/genai/: __init__.py  api.py  pipeline.py
genai/src/genai/agent/: graph.py  nodes.py  questions.py
genai/src/genai/core/: config.py  db.py
genai/src/genai/etl/: crop.py  embeddings.py  enrich.py  scraper.py
genai/src/genai/matching/: engine.py
(+20 files in other folders)
