[project]
name = "etl"
version = "0.1.0"
description = "ETL pipelines for data extraction, transformation, and loading"
readme = "README.md"
authors = [
    { name = "frolando", email = "franco.rolando@qubika.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
etl = "etl:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
