[project]
name = "genai"
version = "0.1.0"
description = "WC2026 face-match + office quiz (qubigol AI features)"
readme = "README.md"
authors = [
    { name = "frolando", email = "franco.rolando@qubika.com" }
]
requires-python = ">=3.13"
dependencies = [
    "deepface>=0.0.100",
    "fastapi>=0.137",
    "insightface>=1.0",
    "langchain-core>=1.4",
    "langchain-openai>=1.3",
    "langgraph>=1.2",
    "numpy>=2.4",
    "onnxruntime>=1.27",
    "openai>=2.43",
    "opencv-python>=4.13.0.92",
    "pdfplumber>=0.11",
    "pillow>=12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.32",
    "rembg>=2.0",
    "requests>=2.34",
    "tf-keras>=2.21.0",
    "torch>=2.12",
    "torchvision>=0.27",
    "transformers>=5.12",
    "uvicorn>=0.49",
]

[project.scripts]
genai            = "genai:main"
genai-api        = "genai.api:serve"
genai-pipeline   = "genai.pipeline:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
